src/objects/Apttus_Config2__PriceListItem__c/fields/Apttus_Config2__ChargeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ChargeType__c</fullName>
    <description>The charge type associated with the price</description>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Price</fullName>
                <label>Product Price</label>
            </value>
            <value>
                <fullName>License Fee</fullName>
            </value>
            <value>
                <fullName>Subscription Fee</fullName>
            </value>
            <value>
                <fullName>Implementation Fee</fullName>
            </value>
            <value>
                <fullName>Installation Fee</fullName>
            </value>
            <value>
                <fullName>Maintenance Fee</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Maintenance for Y2 and Beyond</fullName>
            </value>
            <value>
                <fullName>Year 1 Maintenance</fullName>
            </value>
            <value>
                <fullName>SRS</fullName>
            </value>
            <value>
                <fullName>SSP</fullName>
            </value>
            <value>
                <fullName>Maintenance for Y2 &amp; Beyond</fullName>
            </value>
            <value>
                <fullName>Maintenance Under Warranty</fullName>
            </value>
            <value>
                <fullName>Maintenance Beyond Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>