src/objects/Apttus_Config2__PriceListItem__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The description of the price list.item</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>