src/objects/Apttus_Config2__PriceListItem__c/fields/CPQ_Custom_Bid__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Custom_Bid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Bid</label>
    <type>Checkbox</type>
</CustomField>