src/objects/Apttus_Config2__PriceListItem__c/fields/NokiaCPQ_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>NokiaCPQ_Product_Category__c</fullName>
    <formula>TEXT(Apttus_Config2__ProductId__r.NokiaCPQ_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>